<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardBackgroundColor"
        android:gravity="center"
        android:paddingVertical="@dimen/margin_large"
        android:text="@string/bookmark_delete_hint"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/cardBackgroundColor"
        android:gravity="center"
        android:paddingVertical="@dimen/margin_large"
        android:text="@string/delete"
        android:textColor="@color/red_500"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/cardBackgroundColor"
        android:gravity="center"
        android:paddingVertical="@dimen/margin_large"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/tv_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>