<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_corner_10"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_dark_mode_set"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mini"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_follow_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promote_dark_mode_follow_system"
            android:textSize="@dimen/text_small" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_dark_mode_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promote_off"
            android:textSize="@dimen/text_small" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_dark_mode_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promote_on"
            android:textSize="@dimen/text_small" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_x_mini"
        android:padding="@dimen/margin_mini"
        android:text="@string/confirm"
        android:textColor="?colorAccent"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_set" />
</androidx.constraintlayout.widget.ConstraintLayout>